<resources>
    <string name="app_name">JMusic</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_channel_description">"Displays controls for Currently playing track"</string>
    <string name="notification_channel_name">JMusic</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_continue">Continue</string>
    <string name="signin_or_register">SignIn or Register</string>
    <string name="prompt_name">Name</string>
    <string name="album">Album</string>
    <string name="single">Single</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="price">\u20A6 %1$d</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Info namespace | App labels -->
    <string name="info_app_desc">A simple, rational music player for android.</string>
    <string name="info_channel_name">Music Playback</string>
    <string name="info_widget_name">Now Playing</string>
    <string name="info_widget_desc">View and control playing music</string>

    <!-- Label Namespace | Static Labels -->
    <string name="lbl_retry">Retry</string>
    <string name="lbl_grant">Grant</string>

    <string name="lbl_library">Library</string>
    <string name="lbl_genres">Genres</string>
    <string name="lbl_artists">Artists</string>
    <string name="lbl_albums">Albums</string>
    <string name="lbl_songs">Songs</string>
    <string name="lbl_all_songs">All Songs</string>

    <string name="lbl_search">Search</string>
    <string name="lbl_filter">Filter</string>
    <string name="lbl_filter_all">All</string>

    <string name="lbl_sort">Sort</string>
    <string name="lbl_sort_asc">Ascending</string>
    <string name="lbl_sort_dsc">Descending</string>
    <string name="lbl_sort_artist">Artist</string>
    <string name="lbl_sort_album">Album</string>
    <string name="lbl_sort_year">Year</string>

    <string name="lbl_play">Play</string>
    <string name="lbl_shuffle">Shuffle</string>
    <string name="lbl_play_all">Play from all songs</string>
    <string name="lbl_play_album">Play from album</string>
    <string name="lbl_play_artist">Play from artist</string>
    <string name="lbl_play_genre">Play from genre</string>
    <string name="lbl_playback">Now Playing</string>

    <string name="lbl_queue">Queue</string>
    <string name="lbl_queue_add">Add to queue</string>
    <string name="lbl_queue_added">Added to queue</string>
    <string name="lbl_next_user_queue">Next in Queue</string>

    <string name="lbl_go_artist">Go to artist</string>
    <string name="lbl_go_album">Go to album</string>

    <string name="lbl_state_saved">State saved</string>

    <string name="lbl_add">Add</string>
    <string name="lbl_save">Save</string>
    <string name="lbl_no_dirs">No Folders</string>

    <string name="lbl_about">About</string>
    <string name="lbl_version">Version</string>
    <string name="lbl_code">View on Github</string>
    <string name="lbl_faq">FAQ</string>
    <string name="lbl_licenses">Licenses</string>
    <string name="lbl_author">Developed by OxygenCobalt</string>

    <!-- Settings namespace | Settings-related labels -->
    <string name="set_title">Settings</string>

    <string name="set_ui">Appearance</string>
    <string name="set_theme">Theme</string>
    <string name="set_theme_auto">Automatic</string>
    <string name="set_theme_day">Light</string>
    <string name="set_theme_night">Dark</string>
    <string name="set_accent">Accent</string>
    <string name="set_black_mode">Black theme</string>
    <string name="setting_black_mode_desc">Use a pure-black dark theme</string>

    <string name="set_display">Display</string>
    <string name="set_lib_display">Library Items</string>
    <string name="set_color_notif">Colorize notification</string>
    <string name="set_color_notif_desc">Show album art on notification</string>
    <string name="set_show_covers">Show album covers</string>
    <string name="set_show_covers_desc">Turn off to save memory usage</string>
    <string name="set_quality_covers">Ignore MediaStore covers</string>
    <string name="set_quality_covers_desc">Increases the quality of the album covers, but results in longer loading times and higher memory usage</string>
    <string name="set_alt_action">Use alternate notification action</string>
    <string name="set_alt_loop">Prefer repeat mode action</string>
    <string name="set_alt_shuffle">Prefer shuffle action</string>

    <string name="set_audio">Audio</string>
    <string name="set_focus">Audio Focus</string>
    <string name="set_focus_desc">Pause when other audio plays [ex. Calls]</string>
    <string name="set_plug_mgt">Headset focus</string>
    <string name="set_plug_mgt_desc">Play/Pause when the headset connection changes</string>

    <string name="set_behavior">Behavior</string>
    <string name="set_song_mode">When a song is selected</string>
    <string name="set_keep_shuffle">Remember shuffle</string>
    <string name="set_keep_shuffle_desc">Keep shuffle on when playing a new song</string>
    <string name="set_rewind_prev">Rewind before skipping back</string>
    <string name="set_rewind_prev_desc">Rewind before skipping to the previous song</string>
    <string name="set_loop_pause">Pause on repeat</string>
    <string name="set_loop_pause_desc">Pause when a song repeats</string>

    <string name="set_content">Content</string>
    <string name="set_save">Save playback state</string>
    <string name="set_save_desc">Save the current playback state now</string>
    <string name="set_excluded">Excluded Folders</string>
    <string name="set_excluded_desc">The content of excluded folders is hidden from your library</string>

    <!-- Error Namespace | Error Labels -->
    <string name="err_no_music">No music found</string>
    <string name="err_load_failed">Music loading failed</string>
    <string name="err_no_perms">Auxio needs permission to read your music library</string>
    <string name="err_no_app">No app can open this link</string>
    <string name="err_bad_dir">This directory is not supported</string>

    <!-- Hint Namespace | EditText Hints -->
    <string name="hint_search_library">Search your library…</string>

    <!-- Description Namespace | Accessibility Strings -->
    <string name="desc_sort_button">Change Sort Order</string>
    <string name="desc_track_number">Track %d</string>

    <string name="desc_play_pause">Play or Pause</string>
    <string name="desc_skip_next">Skip to next song</string>
    <string name="desc_skip_prev">Skip to last song</string>
    <string name="desc_change_loop">Change repeat mode</string>
    <string name="desc_shuffle">Turn shuffle on or off</string>

    <string name="desc_clear_user_queue">Clear queue</string>
    <string name="desc_queue_handle">Move queue song</string>
    <string name="desc_clear_search">Clear search query</string>
    <string name="desc_blacklist_delete">Remove excluded directory</string>

    <string name="desc_auxio_icon">Auxio icon</string>
    <string name="desc_no_cover">Album cover</string>
    <string name="desc_album_cover">Album Cover for %s</string>
    <string name="desc_artist_image">Artist Image for %s</string>
    <string name="desc_genre_image">Genre Image for %s</string>


    <!-- Default Namespace | Placeholder values -->
    <string name="def_genre">Unknown Genre</string>
    <string name="def_artist">Unknown Artist</string>
    <string name="def_album">Unknown Album</string>
    <string name="def_date">No Date</string>
    <string name="def_playback">No music playing</string>
    <string name="def_widget_song">Song Name</string>
    <string name="def_widget_artist">Artist Name</string>

    <!-- Color Label namespace | Accent names -->
    <string name="clr_red">Red</string>
    <string name="clr_pink">Pink</string>
    <string name="clr_purple">Purple</string>
    <string name="clr_deep_purple">Deep Purple</string>
    <string name="clr_indigo">Indigo</string>
    <string name="clr_blue">Blue</string>
    <string name="clr_light_blue">Light Blue</string>
    <string name="clr_cyan">Cyan</string>
    <string name="clr_teal">Teal</string>
    <string name="clr_green">Green</string>
    <string name="clr_light_green">Light Green</string>
    <string name="clr_lime">Lime</string>
    <string name="clr_yellow">Yellow</string>
    <string name="clr_orange">Orange</string>
    <string name="clr_deep_orange">Deep Orange</string>
    <string name="clr_label_brown">Brown</string>
    <string name="clr_label_grey">Grey</string>
    <string name="clr_blue_grey">Blue Grey</string>

    <!-- Format Namespace | Value formatting/plurals -->
    <string name="fmt_next_from">Next From: %s</string>
    <string name="fmt_songs_loaded">Songs loaded: %d</string>
    <string name="num_followers"> %s Followers</string>
    <string name="generic_error">An Error Occured</string>

    <plurals name="fmt_song_count">
        <item quantity="one">%d Song</item>
        <item quantity="other">%d Songs</item>
    </plurals>

    <plurals name="fmt_album_count">
        <item quantity="one">%d Album</item>
        <item quantity="other">%d Albums</item>
    </plurals>
</resources>