<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_nav"
    app:startDestination="@id/startFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.geofferyj.jmusic.auth.login.LoginFragment"
        android:label="@string/action_sign_in">
        <argument
            android:name="email"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="com.geofferyj.jmusic.auth.register.RegisterFragment"
        android:label="@string/action_register">
        <argument
            android:name="email"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/startFragment"
        android:name="com.geofferyj.jmusic.auth.start.StartFragment"
        android:label="@string/signin_or_register"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_startFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_startFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
    </fragment>
</navigation>