<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".playback.PlaybackFragment">

    <data>

        <variable
            name="song"
            type="com.geofferyj.jmusic.data.models.Song" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/playback_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSurface">

        <ImageView
            android:id="@+id/playback_cover"
            style="@style/Widget.ImageView.Full"
            android:layout_margin="@dimen/spacing_mid_large"
            android:src="@{song.albumArt}"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/playback_song"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/ic_song" />

        <TextView
            android:id="@+id/playback_song"
            style="@style/Widget.TextView.Primary"
            android:layout_marginStart="@dimen/spacing_mid_large"
            android:layout_marginEnd="@dimen/spacing_mid_large"
            android:text="@{song.title}"
            app:layout_constraintBottom_toTopOf="@+id/playback_artist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Song Name" />

        <TextView
            android:id="@+id/playback_artist"
            style="@style/Widget.TextView.Secondary"
            android:layout_marginStart="@dimen/spacing_mid_large"
            android:layout_marginEnd="@dimen/spacing_mid_large"
            android:text="@{song.artist}"
            app:layout_constraintBottom_toTopOf="@+id/playback_album"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Artist Name" />

        <TextView
            android:id="@+id/playback_album"
            style="@style/Widget.TextView.Secondary"
            android:layout_marginStart="@dimen/spacing_mid_large"
            android:layout_marginEnd="@dimen/spacing_mid_large"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:text="@{song.album}"
            app:layout_constraintBottom_toTopOf="@+id/playback_seek_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Album Name" />

        <SeekBar
            android:id="@+id/playback_seek_bar"
            style="@style/Widget.SeekBar.Full"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/playback_duration_current"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:progress="70" />

        <TextView
            android:id="@+id/playback_duration_current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_mid_large"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:textColor="@color/sel_accented_secondary"
            app:layout_constraintBottom_toTopOf="@+id/playback_play_pause"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="11:38" />

        <TextView
            android:id="@+id/playback_song_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_mid_large"
            android:layout_marginBottom="@dimen/spacing_medium"
            app:layout_constraintBottom_toTopOf="@+id/playback_play_pause"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="16:16" />

        <ImageButton
            android:id="@+id/playback_loop"
            style="@style/Widget.Button.Unbounded"
            android:layout_marginStart="@dimen/spacing_small"
            android:contentDescription="@string/desc_change_loop"
            android:src="@drawable/ic_loop"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/playback_skip_prev"
            app:layout_constraintStart_toStartOf="@+id/playback_duration_current"
            app:layout_constraintTop_toTopOf="@+id/playback_skip_prev" />

        <ImageButton
            android:id="@+id/playback_skip_prev"
            style="@style/Widget.Button.Unbounded"
            android:contentDescription="@string/desc_skip_prev"
            android:src="@drawable/ic_skip_prev"
            app:layout_constraintBottom_toBottomOf="@+id/playback_play_pause"
            app:layout_constraintEnd_toStartOf="@+id/playback_play_pause"
            app:layout_constraintStart_toEndOf="@+id/playback_loop"
            app:layout_constraintTop_toTopOf="@+id/playback_play_pause" />

        <ImageButton
            android:id="@+id/playback_play_pause"
            style="@style/Widget.Component.Playback.PlayPause"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:contentDescription="@string/desc_play_pause"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/playback_song_duration"
            app:layout_constraintStart_toStartOf="@+id/playback_duration_current"
            tools:src="@drawable/ic_play" />

        <ImageButton
            android:id="@+id/playback_skip_next"
            style="@style/Widget.Button.Unbounded"
            android:contentDescription="@string/desc_skip_next"
            android:src="@drawable/ic_skip_next"
            app:layout_constraintBottom_toBottomOf="@+id/playback_play_pause"
            app:layout_constraintEnd_toStartOf="@+id/playback_shuffle"
            app:layout_constraintStart_toEndOf="@+id/playback_play_pause"
            app:layout_constraintTop_toTopOf="@+id/playback_play_pause" />

        <ImageButton
            android:id="@+id/playback_shuffle"
            style="@style/Widget.Button.Unbounded"
            android:layout_marginEnd="@dimen/spacing_small"
            android:contentDescription="@string/desc_shuffle"
            android:src="@drawable/ic_shuffle"
            app:tint="@color/sel_accented"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/playback_skip_next"
            app:layout_constraintEnd_toEndOf="@+id/playback_song_duration"
            app:layout_constraintTop_toTopOf="@+id/playback_skip_next" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>